Improve file hashing progress notifications